--- a/codequizpart 2/style.css
+++ b/codequizpart 2/style.css
@@ -12,12 +12,16 @@ body {
   box-shadow: 0px 5px 15px 0px;
   position: relative;
 }
-#start {
+.header {
+  display: flex;
+  justify-content: space-between;
+  margin: 15px;
+}
+.start {
   font-size: 1.5em;
   font-weight: bolder;
   word-break: break-all;
   width: 100px;
-  height: 150px;
   border: 2px solid lightgrey;
   text-align: center;
   cursor: pointer;
@@ -26,35 +30,9 @@ body {
   top: 50px;
   color: lightgrey;
 }
-#start:hover {
+.start:hover {
   border: 3px solid lightseagreen;
   color: lightseagreen;
-}
-
-#qImg {
-  width: 200px;
-  height: 200px;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-}
-#qImg img {
-  width: 200px;
-  height: 200px;
-  border-top-left-radius: 5px;
-}
-
-#question {
-  width: 500px;
-  height: 125px;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-#question p {
-  margin: 0;
-  padding: 15px;
-  font-size: 1.25em;
 }
 
 #choices {
@@ -66,7 +44,7 @@ body {
 }
 .choice {
   display: inline-block;
-  width: 135px;
+  width: 50px;
   text-align: center;
   border: 1px solid grey;
   border-radius: 5px;
@@ -78,47 +56,6 @@ body {
   font-weight: bold;
 }
 
-#timer {
-  position: absolute;
-  height: 100px;
-  width: 200px;
-  bottom: 0px;
-  text-align: center;
-}
-#counter {
-  font-size: 3em;
-}
-#btimeGauge {
-  width: 150px;
-  height: 10px;
-  border-radius: 10px;
-  background-color: lightgray;
-  margin-left: 25px;
-}
-#timeGauge {
-  height: 10px;
-  border-radius: 10px;
-  background-color: mediumseagreen;
-  margin-top: -10px;
-  margin-left: 25px;
-}
-#progress {
-  width: 500px;
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
-  padding: 5px;
-  text-align: right;
-}
-.prog {
-  width: 25px;
-  height: 25px;
-  border: 1px solid #000;
-  display: inline-block;
-  border-radius: 50%;
-  margin-left: 5px;
-  margin-right: 5px;
-}
 #scoreContainer {
   margin: 20px auto;
   background-color: white;
@@ -130,11 +67,7 @@ body {
   position: relative;
   display: none;
 }
-#scoreContainer img {
-  position: absolute;
-  top: 100px;
-  left: 325px;
-}
+
 #scoreContainer p {
   position: absolute;
   display: block;
@@ -145,4 +78,19 @@ body {
   font-size: 1.5em;
   font-weight: bold;
   text-align: center;
+}
+
+.question {
+  height: 125px;
+  margin: auto;
+  right: 0;
+  text-align: center;
+  top: 0;
+  width: 500px;
+}
+
+.question p {
+  font-size: 1.25em;
+  margin: 0;
+  padding: 15px;
 }
